--- a/.gitattributes
+++ b/.gitattributes
@@ -56,3 +56,66 @@ algorithmHljNew.dll filter=lfs diff=lfs merge=lfs -text
 boost_math_c99-vc120-mt-1_58.dll filter=lfs diff=lfs merge=lfs -text
 boost_python-vc120-mt-1_58.dll filter=lfs diff=lfs merge=lfs -text
 boost_wave-vc120-mt-1_58.dll filter=lfs diff=lfs merge=lfs -text
+nppc64_70.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudafeatures2d300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_features2d300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_photo300.dll filter=lfs diff=lfs merge=lfs -text
+globas.dll filter=lfs diff=lfs merge=lfs -text
+hasp_windows_x64_105562.dll filter=lfs diff=lfs merge=lfs -text
+ircamera_control.dll filter=lfs diff=lfs merge=lfs -text
+opencv_video300.dll filter=lfs diff=lfs merge=lfs -text
+information_api.dll filter=lfs diff=lfs merge=lfs -text
+nppi64_70.dll filter=lfs diff=lfs merge=lfs -text
+opencv_imgproc300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_ffmpeg300_64.dll filter=lfs diff=lfs merge=lfs -text
+opencv_stitching300.dll filter=lfs diff=lfs merge=lfs -text
+hardware_line_scaner.dll filter=lfs diff=lfs merge=lfs -text
+libGLESv2.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudabgsegm300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudacodec300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudaobjdetect300.dll filter=lfs diff=lfs merge=lfs -text
+libGLESv2d.dll filter=lfs diff=lfs merge=lfs -text
+opencv_core300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudastereo300.dll filter=lfs diff=lfs merge=lfs -text
+lib3MF.dll filter=lfs diff=lfs merge=lfs -text
+libgfortran-3.dll filter=lfs diff=lfs merge=lfs -text
+opencv_calib3d300.dll filter=lfs diff=lfs merge=lfs -text
+libblas.dll filter=lfs diff=lfs merge=lfs -text
+LibMVUSBUpdate.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudaoptflow300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_objdetect300.dll filter=lfs diff=lfs merge=lfs -text
+libpng.dll filter=lfs diff=lfs merge=lfs -text
+opencv_core243.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudev300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_videostab300.dll filter=lfs diff=lfs merge=lfs -text
+glog.dll filter=lfs diff=lfs merge=lfs -text
+laser_scaner.dll filter=lfs diff=lfs merge=lfs -text
+libglog.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudafilters300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_superres300.dll filter=lfs diff=lfs merge=lfs -text
+libcurl.dll filter=lfs diff=lfs merge=lfs -text
+libeay32.dll filter=lfs diff=lfs merge=lfs -text
+libquadmath-0.dll filter=lfs diff=lfs merge=lfs -text
+opencv_world300.dll filter=lfs diff=lfs merge=lfs -text
+OpenMeshTools.dll filter=lfs diff=lfs merge=lfs -text
+libpngd.dll filter=lfs diff=lfs merge=lfs -text
+logiclayer.dll filter=lfs diff=lfs merge=lfs -text
+opencv_shape300.dll filter=lfs diff=lfs merge=lfs -text
+npp64_50_35.dll filter=lfs diff=lfs merge=lfs -text
+opencv_flann300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_ml300.dll filter=lfs diff=lfs merge=lfs -text
+opengl32sw.dll filter=lfs diff=lfs merge=lfs -text
+OpenMeshCore.dll filter=lfs diff=lfs merge=lfs -text
+libEGL.dll filter=lfs diff=lfs merge=lfs -text
+libEGLd.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudaimgproc300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_imgcodecs300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_videoio300.dll filter=lfs diff=lfs merge=lfs -text
+LatestVersion.dll filter=lfs diff=lfs merge=lfs -text
+libgcc_s_sjlj-1.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudaarithm300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudawarping300.dll filter=lfs diff=lfs merge=lfs -text
+opencv_highgui300.dll filter=lfs diff=lfs merge=lfs -text
+libcurld.dll filter=lfs diff=lfs merge=lfs -text
+liblapack.dll filter=lfs diff=lfs merge=lfs -text
+opencv_cudalegacy300.dll filter=lfs diff=lfs merge=lfs -text
