--- a/.gitattributes
+++ b/.gitattributes
@@ -210,3 +210,19 @@ Sn3DRegistration.dll filter=lfs diff=lfs merge=lfs -text
 Sn3DAVXImp.dll filter=lfs diff=lfs merge=lfs -text
 sn3DHidBand.dll filter=lfs diff=lfs merge=lfs -text
 zlib.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgUI.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgViewer.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osg.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgGA.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgManipulator.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgTerrain.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgDB.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgWidget.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgShadow.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgText.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgUtil.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgAnimation.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgPresentation.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgVolume.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgSim.dll filter=lfs diff=lfs merge=lfs -text
+osg157-osgParticle.dll filter=lfs diff=lfs merge=lfs -text
